--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+:root {
+    font-size: 1.2rem;
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -22,11 +26,9 @@ button:hover {
 body {
     display: grid;
     grid-template-columns: 1fr 5fr;
-    grid-template-rows: repeat(2, 1fr) 3fr;
+    grid-template-rows: 1fr 5fr;
     grid-template-areas: "dashboard header"
-    "dashboard main"
     "dashboard main";
-    height: 100vh;
 }
 
 ul {
@@ -47,6 +49,9 @@ ul {
     grid-template-rows: repeat(2, 1fr);
     grid-template-areas: "projects announcements"
     "projects trending";
+    padding: 20px;
+    gap: 20px;
+    background-color: #77fafa;
 }
 
 #dashboard {
@@ -95,30 +100,124 @@ ul {
     background-color: transparent;
 }
 
+#user-info {
+    position: relative;
+    bottom: 10px;
+}
+
 #user-info button {
     background-color: transparent;
     width: fit-content;
     border: none;
 }
 
-#user-info img {
+#user-info img , #welcome-user img{
+    display: inline-block;
     width: 50px;
 }
 
-/* Main's child */ 
+#welcome-user img {
+    width: 70px;
+}
+
+#user-info span , #welcome-user span{
+    position: relative;
+    bottom: 15px;
+}
+
+#buttons-list {
+    display: grid;
+    align-items: center;
+}
+
+#buttons-list ul {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+}
+
+#buttons-list button {
+    padding: 5px 40px;
+    border-radius: 20px;
+    background-color: #06b6d4;
+    color: white;
+    font-size: 0.8rem;
+}
+
+/* Main's child */
+main p {
+    margin-top: 10px;
+}
+
 #projects {
     display: grid;
     grid-area: projects;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 2fr repeat(2, 10fr);
+    gap: 20px;
+}
+
+#projects h2 {
+    grid-column: 1 / 3;
+}
+
+article {
+    border: 1px solid white;
+    background-color: #fffff7;
+    border-radius: 10px;
+    padding: 20px;
+}
+
+#projects article {
+    border-left: 10px solid yellow;
+    height: 200px;
+    position: relative;
+    height: 100%;
+}
+
+.view-page {
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
 }
 
 #announcements {
     display: grid;
     grid-area: announcements;
+    grid-template-rows: repeat(4, 1fr);
+    gap: 5px;
+}
+
+#announcements article{
+    height: 80px;
 }
 
 #trending {
     display: grid;
     grid-area: trending;
+    grid-template-rows: repeat(4, 1fr);
+    gap: 5px;
+}
+
+#trending article {
+    background-color: white;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: repeat(2, 1fr);
+    padding: 10px;
+    align-items: center;
+}
+
+.author-avatar {
+    height: 50px;
+    grid-row: 1/3;
+}
+
+#trending p {
+    grid-column: 2/ 3;
+    grid-row: 2/3;
 }
 
 /* Dashboard's child */
