--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ button:hover {
 body {
     display: grid;
     grid-template-columns: 1fr 5fr;
-    grid-template-rows: 1fr 5fr;
+    grid-template-rows: 1fr 4fr;
     grid-template-areas: "dashboard header"
     "dashboard main";
 }
@@ -46,9 +46,7 @@ ul {
     grid-area: main;
     display: grid;
     grid-template-columns: 4fr 2fr;
-    grid-template-rows: repeat(2, 1fr);
-    grid-template-areas: "projects announcements"
-    "projects trending";
+    grid-template-areas: "project-container another-container";
     padding: 20px;
     gap: 20px;
     background-color: #77fafa;
@@ -63,6 +61,10 @@ ul {
 
 /* Specific section */
 /* Header's child */
+header span {
+    font-weight: bold;
+}
+
 #tools-bar {
     display: grid;
     grid-template-columns: 4fr 1fr 3fr;
@@ -70,7 +72,7 @@ ul {
 
 #menu-bar {
     display: grid;
-    grid-template-columns: 3fr 2fr;
+    grid-template-columns: repeat(2, 2fr);
 }
 
 #buttons-list ul {
@@ -145,15 +147,23 @@ ul {
 }
 
 /* Main's child */
+#another-container {
+    grid-area: another-container;
+}
+
 main p {
     margin-top: 10px;
 }
 
+#project-container {
+    grid-area: project-container;
+}
+
 #projects {
+    margin-top: 30px;
     display: grid;
     grid-area: projects;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 2fr repeat(2, 10fr);
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 20px;
 }
 
@@ -165,14 +175,13 @@ article {
     border: 1px solid white;
     background-color: #fffff7;
     border-radius: 10px;
-    padding: 20px;
+    padding: 20px;  
 }
 
 #projects article {
     border-left: 10px solid yellow;
     height: 200px;
     position: relative;
-    height: 100%;
 }
 
 .view-page {
@@ -183,41 +192,25 @@ article {
     right: 20px;
 }
 
-#announcements {
-    display: grid;
-    grid-area: announcements;
-    grid-template-rows: repeat(4, 1fr);
-    gap: 5px;
+#another-container article {
+    margin: 15px 0;
 }
 
-#announcements article{
-    height: 80px;
-}
-
-#trending {
-    display: grid;
-    grid-area: trending;
-    grid-template-rows: repeat(4, 1fr);
-    gap: 5px;
-}
-
-#trending article {
+#trending a {
     background-color: white;
     display: grid;
-    grid-template-columns: 1fr 2fr;
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: 1fr 3fr;
     padding: 10px;
     align-items: center;
+    margin-top: 10px;
+    border-radius: 10px;
+    text-decoration: none;
+    color: black;
 }
 
 .author-avatar {
     height: 50px;
     grid-row: 1/3;
-}
-
-#trending p {
-    grid-column: 2/ 3;
-    grid-row: 2/3;
 }
 
 /* Dashboard's child */
